[package]
name = "geoscrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
reqwest = { version = "0.11.12", features = ["blocking"] }
scraper = "0.13.0"
tokio = { version = "1.21.2", features = ["full"] }
